--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -38,6 +38,7 @@ resources:
         VPC_SUBNET_NAME: "ami_vpc_subnet_pub"
         VPC_SUBNET_CIDR_BLOCK: "200.0.0.0/24"
         BASE_EC2_AMI: "ami-841f46ff"
+        STATE_RES_NAME: "ami_info"
 
 # Output of AMI Provisioning
   - name: ami_info
@@ -106,6 +107,7 @@ resources:
         INST_COUNT: 2
         INST_TAG: "test_ecs_inst"
         INST_TYPE: "t2.micro"
+        STATE_RES_NAME: "test_info"
 
 # Output of Test Provisioning
   - name: test_info
