--- a/an_vpc_prov.yml
+++ b/an_vpc_prov.yml
@@ -3,7 +3,7 @@
   gather_facts: False
 
   vars:
-    STATE_RES_NAME: ami_info
+    STATE_RES_NAME: "${STATE_RES_NAME}"
     VPC_CIDR_BLOCK: "${VPC_CIDR_BLOCK}"
     VPC_NAME: "${VPC_NAME}"
     VPC_SUBNET_CIDR_BLOCK: "${VPC_SUBNET_CIDR_BLOCK}"
