--- a/an_ecs_deprov.yml
+++ b/an_ecs_deprov.yml
@@ -11,10 +11,6 @@
     INST_PROF_NAME: "${INST_PROF_NAME}"
     STATE_RES_NAME: "${STATE_RES_NAME}"
   tasks:
-    - name: run cmd
-      shell: |
-        shipctl post_resource_state "{{ STATE_RES_NAME }}" versionName "build-${BUILD_NUMBER}"
-
     - name: Terminate {{ INST_COUNT }} instances with tag {{ INST_TAG }}
       ec2:
          key_name: demo-key
@@ -30,18 +26,7 @@
             Name: "{{ INST_TAG }}"
       register: ec2
 
-    - name: run cmd
-      shell: |
-        shipctl put_resource_state "{{ STATE_RES_NAME }}" "INST_{{ item.ami_launch_index }}_PUBLIC_IP" DELETED
-        shipctl put_resource_state "{{ STATE_RES_NAME }}" "INST_{{ item.ami_launch_index }}_ID" DELETED
-      with_items: "{{ ec2.instances }}"
-
-    - name: Create ECS Cluster {{ ECS_CLUSTER_NAME }}
+    - name: Delete ECS Cluster {{ ECS_CLUSTER_NAME }}
       ecs_cluster:
         name: "{{ ECS_CLUSTER_NAME }}"
         state: absent
-
-    - name: run cmd
-      shell: |
-        shipctl put_resource_state "{{ STATE_RES_NAME }}" CLUSTER_ARN DELETED
-
