--- a/an_vpc_deprov.yml
+++ b/an_vpc_deprov.yml
@@ -23,47 +23,47 @@
             gateway_id: "{{ VPC_IGW_ID }}"
         state: absent
 
-    - name: Delete Public SG group
-      ec2_group:
-        name: publicSG
-        description: Public access Security Group
-        vpc_id: "{{ VPC_ID }}"
-        rules:
-          - proto: tcp
-            from_port: 80
-            to_port: 80
-            cidr_ip: 0.0.0.0/0
-          - proto: tcp
-            from_port: 22
-            to_port: 22
-            cidr_ip: 0.0.0.0/0
-          - proto: tcp
-            from_port: 8080
-            to_port: 8080
-            cidr_ip: 0.0.0.0/0
-          - proto: tcp
-            from_port: 0
-            to_port: 65535
-            cidr_ip: "{{ VPC_SUBNET_CIDR_BLOCK }}"
-        state: absent
-
-    - name: Delete Subnet for VPC {{ VPC_NAME }}
-      ec2_vpc_subnet:
-        vpc_id: "{{ VPC_ID }}"
-        cidr: "{{ VPC_SUBNET_CIDR_BLOCK }}"
-        state: absent
-
-    - name: Delete internet gateway for VPC {{ VPC_NAME }}
-      ec2_vpc_igw:
-        vpc_id: "{{ VPC_ID }}"
-        state: absent
-
-    - name: Delete VPC {{ VPC_NAME }}
-      ec2_vpc_net:
-        state: absent
-        name: "{{ VPC_NAME }}"
-        cidr_block: "{{ VPC_CIDR_BLOCK }}"
-        tags:
-          module: "{{ VPC_NAME }}"
-        tenancy: dedicated
-      register: vpc
+#    - name: Delete Public SG group
+#      ec2_group:
+#        name: publicSG
+#        description: Public access Security Group
+#        vpc_id: "{{ VPC_ID }}"
+#        rules:
+#          - proto: tcp
+#            from_port: 80
+#            to_port: 80
+#            cidr_ip: 0.0.0.0/0
+#          - proto: tcp
+#            from_port: 22
+#            to_port: 22
+#            cidr_ip: 0.0.0.0/0
+#          - proto: tcp
+#            from_port: 8080
+#            to_port: 8080
+#            cidr_ip: 0.0.0.0/0
+#          - proto: tcp
+#            from_port: 0
+#            to_port: 65535
+#            cidr_ip: "{{ VPC_SUBNET_CIDR_BLOCK }}"
+#        state: absent
+#
+#    - name: Delete Subnet for VPC {{ VPC_NAME }}
+#      ec2_vpc_subnet:
+#        vpc_id: "{{ VPC_ID }}"
+#        cidr: "{{ VPC_SUBNET_CIDR_BLOCK }}"
+#        state: absent
+#
+#    - name: Delete internet gateway for VPC {{ VPC_NAME }}
+#      ec2_vpc_igw:
+#        vpc_id: "{{ VPC_ID }}"
+#        state: absent
+#
+#    - name: Delete VPC {{ VPC_NAME }}
+#      ec2_vpc_net:
+#        state: absent
+#        name: "{{ VPC_NAME }}"
+#        cidr_block: "{{ VPC_CIDR_BLOCK }}"
+#        tags:
+#          module: "{{ VPC_NAME }}"
+#        tenancy: dedicated
+#      register: vpc
